--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
     "css-loader": "^6.8.1",
+    "firebase": "^10.8.0",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "leaflet": "^1.9.4",
@@ -26,6 +27,7 @@
     "react-whatsapp": "^0.3.0",
     "slick-carousel": "^1.8.1",
     "style-loader": "^3.3.3",
+    "validator": "^13.11.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
