--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,12 @@
     "css-loader": "^6.8.1",
     "dotenv": "^16.4.5",
     "firebase": "^10.8.0",
+    "fs": "^0.0.1-security",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "leaflet": "^1.9.4",
     "nodemailer": "^6.9.11",
+    "pdfkit": "^0.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
