--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,10 +29,14 @@
     "react-select": "^5.7.5",
     "react-slick": "^0.29.0",
     "react-whatsapp": "^0.3.0",
+    "typescript": "^4.9.5",
     "slick-carousel": "^1.8.1",
     "style-loader": "^3.3.3",
+    "url": "^0.11.3",
+    "util": "^0.12.5",
     "validator": "^13.11.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "type": "module"
   },
   "scripts": {
     "start": "react-scripts start",
