--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "react-whatsapp": "^0.3.0",
     "slick-carousel": "^1.8.1",
     "style-loader": "^3.3.3",
+    "sweetalert2": "^11.10.6",
     "validator": "^13.11.0",
     "web-vitals": "^2.1.4"
   },
