--- a/backend/package.json
+++ b/backend/package.json
@@ -13,9 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.3",
     "firebase": "^10.8.0",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.2",
@@ -23,6 +24,7 @@
     "jspdf-autotable": "^3.8.2",
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.11",
     "validator": "^13.11.0"
   },
   "devDependencies": {
