--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,6 @@
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "leaflet": "^1.9.4",
-    "nodemailer": "^6.9.11",
     "pdfkit": "^0.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -29,14 +28,14 @@
     "react-select": "^5.7.5",
     "react-slick": "^0.29.0",
     "react-whatsapp": "^0.3.0",
-    "typescript": "^4.9.5",
+    "resend": "^3.2.0",
     "slick-carousel": "^1.8.1",
     "style-loader": "^3.3.3",
+    "typescript": "^4.9.5",
     "url": "^0.11.3",
     "util": "^0.12.5",
     "validator": "^13.11.0",
-    "web-vitals": "^2.1.4",
-    "type": "module"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
