--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.11",
+    "pdfkit": "^0.14.0",
     "validator": "^13.11.0"
   },
   "devDependencies": {
