--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
+    "bootstrap": "^5.3.3",
     "css-loader": "^6.8.1",
     "dotenv": "^16.4.5",
     "firebase": "^10.8.0",
@@ -20,6 +21,7 @@
     "leaflet": "^1.9.4",
     "pdfkit": "^0.14.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-responsive-carousel": "^3.2.23",
