--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react-scripts": "^5.0.1",
     "react-select": "^5.7.5",
     "react-slick": "^0.29.0",
+    "react-toastify": "^10.0.5",
     "react-whatsapp": "^0.3.0",
     "resend": "^3.2.0",
     "slick-carousel": "^1.8.1",
