--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,49 +4,48 @@
   "homepage": "https://prowessagricola.prowessec.com",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.4.0",
-    "@fortawesome/free-brands-svg-icons": "^6.5.2",
-    "@fortawesome/free-solid-svg-icons": "^6.5.2",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.5.1",
-    "bootstrap": "^5.3.3",
-    "css-loader": "^6.8.1",
-    "dotenv": "^16.4.5",
-    "firebase": "^10.8.0",
-    "fs": "^0.0.1-security",
-    "jspdf": "^2.5.1",
-    "jspdf-autotable": "^3.8.2",
-    "leaflet": "^1.9.4",
-    "pdfkit": "^0.14.0",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.10.2",
-    "react-dom": "^18.2.0",
-    "react-leaflet": "^4.2.1",
-    "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^6.21.0",
-    "react-scripts": "^5.0.1",
-    "react-select": "^5.7.5",
-    "react-slick": "^0.29.0",
-    "react-toastify": "^10.0.5",
-    "react-whatsapp": "^0.3.0",
-    "resend": "^3.2.0",
-    "slick-carousel": "^1.8.1",
-    "style-loader": "^3.3.3",
-    "sweetalert2": "^11.10.6",
-    "typescript": "^4.9.5",
-    "url": "^0.11.3",
-    "util": "^0.12.5",
-    "validator": "^13.11.0",
-    "web-vitals": "^2.1.4"
+    "@fortawesome/fontawesome-svg-core": "6.5.2",
+    "@fortawesome/free-brands-svg-icons": "6.5.2",
+    "@fortawesome/free-solid-svg-icons": "6.5.2",
+    "@fortawesome/react-fontawesome": "0.2.0",
+    "@testing-library/react": "15.0.7",
+    "@testing-library/user-event": "14.5.2",
+    "axios": "1.6.8",
+    "bootstrap": "5.3.3",
+    "css-loader": "6.11.0",
+    "dotenv": "16.4.5",
+    "firebase": "10.12.0",
+    "fs": "0.0.1-security",
+    "jspdf": "2.5.1",
+    "jspdf-autotable": "3.8.2",
+    "leaflet": "1.9.4",
+    "pdfkit": "0.15.0",
+    "react": "18.3.1",
+    "react-bootstrap": "2.10.2",
+    "react-dom": "18.3.1",
+    "react-leaflet": "4.2.1",
+    "react-responsive-carousel": "3.2.23",
+    "react-router-dom": "6.23.1",
+    "react-scripts": "5.0.1",
+    "react-select": "5.8.0",
+    "react-slick": "0.30.2",
+    "react-toastify": "10.0.5",
+    "react-whatsapp": "0.3.0",
+    "resend": "3.2.0",
+    "slick-carousel": "1.8.1",
+    "style-loader": "3.3.4",
+    "sweetalert2": "11.11.0",
+    "typescript": "4.9.5",
+    "url": "0.11.3",
+    "util": "0.12.5",
+    "validator": "13.12.0",
+    "web-vitals": "2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "yarn react-scripts start",
+    "build": "yarn react-scripts build",
+    "test": "yarn react-scripts test",
+    "eject": "yarn react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
