--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.11",
     "pdfkit": "^0.14.0",
-    "validator": "^13.11.0"
+    "validator": "^13.11.0",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
