--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,7 +39,8 @@
     "url": "0.11.3",
     "util": "0.12.5",
     "validator": "13.12.0",
-    "web-vitals": "2.1.4"
+    "web-vitals": "2.1.4",
+    "yarn": "^1.22.22"
   },
   "scripts": {
     "start": "yarn react-scripts start",
