--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-bootstrap": "2.10.2",
     "react-dom": "18.3.1",
     "react-leaflet": "4.2.1",
+    "react-paginate": "^8.2.0",
     "react-responsive-carousel": "3.2.23",
     "react-router-dom": "6.23.1",
     "react-scripts": "5.0.1",
