--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
     "@testing-library/react": "15.0.7",
     "@testing-library/user-event": "14.5.2",
     "axios": "1.6.8",
-    "bootstrap": "5.3.3",
+    "bootstrap": "^5.3.3",
     "css-loader": "6.11.0",
     "dotenv": "16.4.5",
     "firebase": "10.12.0",
